--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
   <div class="column-layout">
     <div class="main-column">
       <h2>Main Column</h2>
-      <img src="https://msabbyb.github.io/How-To-/images/ClearSkiesPlanning.jpg">
       <p>The difference from a planned and well executed event versus a thrown together get together is huge. Have you ever dreamed of having that perfect wedding or an amzing quinenera? 
   Clear Skies Planning is the way to go! Here at clear skies we pair you up with an event specialist that can meet the needs of your vision, and
-  make it come true. Call clear skies today and let us help you reach the skies and acheive your dreams!</p>
+  make it come true. Call clear skies today and let us help you reach the skies and acheive your dreams! </p>
     </div>
 
     <div class="sidebar-one">
       <h3>Clear Skies</h3>
+       <img src="https://msabbyb.github.io/How-To-/images/ClearSkiesPlanning.jpg" class="image">
       <p>This company is set on making your dreams come true. With our trained professionals
       you are able to take action on makingyour dreamsa reality! With this company you are able to...
       <ul>
@@ -25,12 +25,6 @@
   <li> Be provided with a planning Professional.</li>
   <li>See your dreams come true!</li>
 </ul>
-    </p>
-    </div>
-
-    <div class="sidebar-two">
-      <h3>Sidebar Two</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi nisi tenetur sint dignissimos nulla, blanditiis nesciunt.</p>
     </div>
   </div>
 
